--- a/index.html
+++ b/index.html
@@ -3,9 +3,127 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WoW</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="smallerDeviceCSS.css">    
 </head>
 <body>
-    
+    <header>
+        <div class="name">
+            <img src="images/Group 40071 (2).png" alt="">
+            <h2>Wizerd of <span class="primaryColor">Wanderers</span></h2>
+        </div>
+        <nav>
+            <img src="images/burger-menu-svgrepo-com (1).svg" alt="">
+            <a href="" class="primaryColor">Home</a>
+            <a href="">Packages</a>
+            <a href="">Testimonial</a>
+            <a href="">Blog</a>
+            <a href="">Contacts</a>
+        </nav>
+    </header>
+    <section class="banner">
+        <h1>Explore Your Travel</h1>
+        <p>The exploring wanderer dances through the tapestry of the world, driven by an insatiable curiosity that transcends borders. Each footfall resonates with the echoes of ancient landscapes and modern cityscapes alike, painting a vibrant portrait of a life lived in perpetual exploration. Embracing the kaleidoscope of cultures, the wanderer finds unity in diversity, weaving tales of connection and understanding. </p>
+        <div class="select">
+            <input type="text" placeholder="Where to go">
+            <select>
+                <option disabled selected value="">When</option>
+                <option value="option1">This week</option>
+                <option value="option2">This month</option>
+                <option value="option3">Next month</option>
+            </select>
+            <select>
+                <option disabled selected value="">Select type</option>
+                <option value="option1">AC Bus</option>
+                <option value="option2">Non-AC Bus</option>
+                <option value="option3">Train</option>
+                <option value="">Flight</option>
+            </select>
+            <button class="findNow">
+                <div>
+                    <img src="images/search.ico" alt="">
+                    <h3>Find now</h3>
+                </div>
+            </button>
+              
+        </div>
+    </section>
+    <section class="popularTours">
+        <div>
+            <h2>Our Popular Tours</h2>
+            <p>Embark on an unforgettable journey with our popular tour package, where every moment is crafted for exploration and adventure. Immerse yourself in breathtaking landscapes, cultural treasures, and personalized experiences that define the essence of a truly remarkable getaway.</p>
+            <ul>
+                <li> Bangladesh, a captivating tour, where dynamic cultures blend seamlessly with stunning natural beauty. Delve into the historical treasures, embrace the genuine warmth of local hospitality.</li>
+                <li>North America, immerse yourself in a rich tapestry of diverse landscapes, from the breathtaking Rocky Mountains to the sun-kissed beaches of California.</li>
+                <li>Maldives tour, where pristine white-sand beaches meet crystal-clear turquoise waters. Immerse yourself in luxurious overwater bungalows, indulge in vibrant marine life during snorkeling adventures.</li>
+            </ul>
+            <p>Journey to explore the beauty of our world! From majestic landscapes to vibrant cultures, let each adventure be a chapter in your own extraordinary story. </p>
+            <button class="primaryButton">Read more</button>
+        </div>
+        <div>
+            <img src="images/Rectangle 4.png" alt="">
+        </div>
+    </section>
+    <section>
+        <div class="destination">
+            <h1>Choose Your Destination</h1>
+            <p>Selecting an amazing destination is the key to unlocking unforgettable experiences. Whether it's the allure of cultural gems, breathtaking landscapes, or vibrant cityscapes, choose a destination that resonates with your sense of adventure for a truly remarkable journey.</p>
+
+        </div>
+        <div class="image-container">
+            <div>
+                <img src="images/Rectangle 5.png" alt="">
+                <div class="overlayText">Maldives</div>
+            </div>
+            <div>
+                <img src="images/Rectangle 8.png" alt="">
+                <div class="overlayText">Indonesia</div>
+            </div>
+            <div>
+                <img src="images/Rectangle 6.png" alt="">
+                <div class="overlayText">SriLanka</div>
+            </div>
+            <div>
+                <img src="images/Rectangle 7.png" alt="">
+                <div class="overlayText">North America</div>
+            </div>
+            <div>
+                <img src="images/Rectangle 9.png" alt="">
+                <div class="overlayText">Kashmir</div>
+            </div>
+            <div>
+                <img src="images/Rectangle 11.png" alt="">
+                <div class="overlayText">Bangladesh</div>
+            </div>
+            <div>
+                <img src="images/Rectangle 10.png" alt="">
+                <div class="overlayText">Bandarban</div>
+            </div>
+        </div>
+    </section> 
+    <section class="choose"> 
+        <div class="choosetext">
+            <h1>Why Choose Us</h1>
+            <p> With expert insights, personalized itineraries, and a commitment to seamless <br> experiences, we transform travel dreams into unforgettable realities.</p>
+        </div>
+        <div class="choosecard">
+            <div id="hotel" class="card">
+                <img src="images/hotel.png" alt="">
+                <h1>Handpicked Hotels</h1>
+                <p>Indulge in luxury and comfort with our handpicked hotels, carefully selected for their unique charm and impeccable service. From boutique hideaways to iconic resorts, each accommodation promises an exquisite stay tailored to elevate your travel experience.</p>
+            </div>
+            <div id="service" class="card"                        >
+                <img src="images/map.png" alt="">
+                <h1>World Class Services</h1>
+                <p>Experience the epitome of luxury with our world-class services, where attention to detail meets unparalleled hospitality. Elevate your journey as we redefine excellence, ensuring every moment is adorned with sophistication and seamless indulgence.</p>
+            </div >
+            <div id="price" class="card">
+                <img src="images/price-tag.png" alt="">
+                <h1>Best Price Guarantee</h1>
+                <p>Unlock your wanderlust with confidence! Our travel services offer a best price guarantee, ensuring you get the most exceptional experiences at unbeatable rates. Travel confidently, knowing you've secured the best value for your adventure.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
