--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </section>
     <section class="popularTours">
         <div>
-            <h2>Our Popular Tours</h2>
+            <h2 id="twrap">Our Popular Tours</h2>
             <p>Embark on an unforgettable journey with our popular tour package, where every moment is crafted for exploration and adventure. Immerse yourself in breathtaking landscapes, cultural treasures, and personalized experiences that define the essence of a truly remarkable getaway.</p>
             <ul>
                 <li> Bangladesh, a captivating tour, where dynamic cultures blend seamlessly with stunning natural beauty. Delve into the historical treasures, embrace the genuine warmth of local hospitality.</li>
@@ -108,22 +108,146 @@
             <p> With expert insights, personalized itineraries, and a commitment to seamless <br> experiences, we transform travel dreams into unforgettable realities.</p>
         </div>
         <div class="choosecard">
-            <div id="hotel" class="card">
+            <div id="hotel" class="card1">
                 <img src="images/hotel.png" alt="">
                 <h1>Handpicked Hotels</h1>
                 <p>Indulge in luxury and comfort with our handpicked hotels, carefully selected for their unique charm and impeccable service. From boutique hideaways to iconic resorts, each accommodation promises an exquisite stay tailored to elevate your travel experience.</p>
             </div>
-            <div id="service" class="card"                        >
+            <div id="service" class="card1"                        >
                 <img src="images/map.png" alt="">
                 <h1>World Class Services</h1>
                 <p>Experience the epitome of luxury with our world-class services, where attention to detail meets unparalleled hospitality. Elevate your journey as we redefine excellence, ensuring every moment is adorned with sophistication and seamless indulgence.</p>
             </div >
-            <div id="price" class="card">
+            <div id="price" class="card1">
                 <img src="images/price-tag.png" alt="">
                 <h1>Best Price Guarantee</h1>
                 <p>Unlock your wanderlust with confidence! Our travel services offer a best price guarantee, ensuring you get the most exceptional experiences at unbeatable rates. Travel confidently, knowing you've secured the best value for your adventure.</p>
             </div>
         </div>
     </section>
+    <section class="deals">
+        <div class="dealsText">
+            <h1>Deals & Discounts</h1>
+            <p>Uncover unbeatable deals and discounts on our curated selection of travel experiences. Elevate your journey with exclusive offers, ensuring you indulge in extraordinary adventures without compromising your budget.</p>
+        </div>
+        <div class="card-container" id="first">
+            <div class="card">
+                <div class="icontextholder">
+                    <div class="icontext">
+                        <img src="images/clock.svg" alt="">
+                        <p>7 Day / 6 Night</p>
+                    </div>
+                    <div class="icontext">
+                        <img src="images/group.svg" alt="">
+                        <p>Max : 10</p>
+                    </div>
+                    <div class="icontext">
+                        <img src="images/location.svg" alt="">
+                        <p>Malaysia</p>
+                    </div>
+                </div>
+                <h2>Tour To Satorini</h2>
+                <p>Indulge in opulence and sophistication at our luxurious hotels, where impeccable service meets exquisite design. <span class="overflow"> Elevate your stay with lavish amenities and unparalleled comfort for an unforgettable, five-star experience.</span></p>
+                <h3>Price: $1300-$1500</h3>
+                <button class="primaryButton">Book Now</button>
+            </div>
+        </div>
+        <div class="card-container" id="second">
+            <div class="card">
+                <div class="icontextholder">
+                    <div class="icontext">
+                        <img src="images/clock.svg" alt="">
+                        <p>7 Day / 6 Night</p>
+                    </div>
+                    <div class="icontext">
+                        <img src="images/group.svg" alt="">
+                        <p>Max : 10</p>
+                    </div>
+                    <div class="icontext">
+                        <img src="images/location.svg" alt="">
+                        <p>Malaysia</p>
+                    </div>
+                </div>
+                <h2>Tour To Satorini</h2>
+                <p>Indulge in opulence and sophistication at our luxurious hotels, where impeccable service meets exquisite design.<span class="overflow"> Elevate your stay with lavish amenities and unparalleled comfort for an unforgettable, five-star experience.</span></p>
+                <h3>Price: $1300-$1500</h3>
+                <button class="primaryButton">Book Now</button>
+            </div>
+        </div>
+        <div class="card-container" id="third">
+            <div class="card">
+                <div class="icontextholder">
+                    <div class="icontext">
+                        <img src="images/clock.svg" alt="">
+                        <p>7 Day / 6 Night</p>
+                    </div>
+                    <div class="icontext">
+                        <img src="images/group.svg" alt="">
+                        <p>Max : 10</p>
+                    </div>
+                    <div class="icontext">
+                        <img src="images/location.svg" alt="">
+                        <p>Malaysia</p>
+                    </div>
+                </div>
+                <h2>Tour To Satorini</h2>
+                <p>Indulge in opulence and sophistication at our luxurious hotels, where impeccable service meets exquisite design.<span class="overflow"> Elevate your stay with lavish amenities and unparalleled comfort for an unforgettable, five-star experience.</span></p>
+                <h3>Price: $1300-$1500</h3>
+                <button class="primaryButton">Book Now</button>
+            </div>
+        </div>
+        <button class="primaryButton">See All Packages</button>
+    </section>
+    <section class="popularTours">
+        <div class="peacetext">
+            <h2 class="peace">A Simple Perfect Place To Get Lost</h2>
+            <p>Discover serenity in a tranquil oasis, where the rhythmic whispers of nature embrace you. Lose yourself in the simplicity of this perfect haven, where inner peace becomes your trusted companion.</p>
+            <ul class="list">
+                <li>Getting lost with inner peace can be a transformative experience, providing valuable moments of self-discovery and reflection. </li>
+                <li>Embracing the unknown with a tranquil mind opens the door to new perspectives, personal growth, and a deeper connection to the world around us.</li>
+            </ul>
+            <button class="primaryButton">Read more</button>
+        </div>
+        <div>
+            <video src="images/video.mp4" class="video" controls></video>
+        </div>
+    </section>
+    <section class="news">
+        <div class="newsletter">
+            <h2>News Letter</h2>
+            <p>Get your daily dose of travel news & tips. Sign up today!</p>
+            <hr>
+            <div class="newsform">
+                <input type="text" placeholder="Your Name">
+                <input type="text" placeholder="Your Email">
+                <button class="primaryButton">Subscribe</button>
+            </div>
+
+        </div>
+        <div>
+            <img src="images/Rectangle 8 (1).png" alt="">
+            <div class=" sticker">
+                <h4 style="margin: 0;">WoW.com</h4>
+                <h3>Save up to 70%</h3>
+            </div>
+
+        </div>
+    </section>
+    <footer>
+        <div class="footer-icon">
+            <div class="footerhead"><img src="images/Group 40071 (2).png" alt="">
+                <h2 class="icon-title">Wizerd of <span class="primaryColor">Wandarers</span></h2></div>
+            <p class="footer-description">Overall,we Prioritize the satisfaction and comfort of travelers by offering
+                well-organized, enjoyable, and memorable experiences.</p>
+            <div>
+                <img src="images/facebook.jpg" alt="" class="first">
+                <img src="images/github.jpg" alt="" class="second">
+                <img src="images/instagram.jpg" alt="" class="third">
+                <img src="images/twitter.jpg" alt="" class="fourth">
+            </div>
+            <hr>
+            <p class="small"><small>2017, All Rights Reserved.</small></p>
+        </div>
+    </footer>
 </body>
 </html>
