extra section done

--- a/index.html
+++ b/index.html
@@ -233,6 +233,18 @@
 
         </div>
     </section>
+    <section class="experience">
+        <h2>Share your experiences with us</h2>
+        <textarea id="" cols="30" rows="10" placeholder="Write your experience here"></textarea>
+        <div class="file-input-container">
+            <h3>Share your beautiful memories</h3>
+            <input type="file" id="fileInput" name="fileInput" >
+            <label for="fileInput" class="file-input-label">Choose a file</label>
+            <button class="primaryButton">Share</button>
+            
+        </div>
+    </section>
+
     <footer>
         <div class="footer-icon">
             <div class="footerhead"><img src="images/Group 40071 (2).png" alt="">
